Añadidos varios cambios (ver descripcion)
- Retoques en subworld layout y sus cajitas pa que no haya q modificar
el padding y el ancho de las celdas del gridview por codigo.
- Retoques en photo fragment pa que salga la foto del coche en todos los
dispositivos igual.
- Ahoar el botón help marca la respuesta como acertada (testeo de
puntuacion en la app).
-Los textos de informacion del list worlds van acorde con la información
interna del juego

--- a/res/layout/fragment_box_open.xml
+++ b/res/layout/fragment_box_open.xml
@@ -3,21 +3,21 @@
 
             android:id="@+id/switcher"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_height="match_parent"
             android:inAnimation="@anim/fade_in"
             android:outAnimation="@anim/fade_out" >
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_half_closed_box" />
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_open_box" />
 </ViewSwitcher>
