--- a/res/layout/fragment_box_blocked.xml
+++ b/res/layout/fragment_box_blocked.xml
@@ -3,15 +3,14 @@
 
             android:id="@+id/switcher"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_height="match_parent"
             android:inAnimation="@anim/vibrate" >
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_close_box" />
 
 </ViewSwitcher>
