--- a/res/layout/fragment_subworld.xml
+++ b/res/layout/fragment_subworld.xml
@@ -1,16 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gridview"
+    android:paddingRight="5dp"
+	android:paddingLeft="5dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:verticalSpacing="10dp"
+    android:horizontalSpacing="5dp"
+    android:stretchMode="columnWidth"
+    android:fitsSystemWindows="true"
+    android:numColumns="3" 
     android:background="@drawable/shapes">
-    <GridView
-        android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:verticalSpacing="0dp"
-        android:horizontalSpacing="0dp"
-        android:stretchMode="columnWidth"
-        android:numColumns="3" />
         
-</FrameLayout>
+</GridView>
