--- a/res/layout/fragment_main_menu.xml
+++ b/res/layout/fragment_main_menu.xml
@@ -1,14 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/shapes" >
 
     <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:orientation="vertical" >
  		
  		<RelativeLayout 
@@ -84,7 +83,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal" >
 	        
             <ImageButton 
@@ -116,10 +115,11 @@
     </LinearLayout>
 
     <ImageView
-      	android:layout_width="wrap_content"
-      	android:layout_height="wrap_content"
-      	android:layout_alignParentBottom="true"
-      	android:scaleType="fitEnd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         android:src="@drawable/fondo" />
 
 </RelativeLayout>
