--- a/res/layout/container_question.xml
+++ b/res/layout/container_question.xml
@@ -13,7 +13,7 @@
     	android:layout_weight="0.4"/>
     
     <FrameLayout 
-        android:id="@+id/fragment_result"
+        android:id="@+id/fragment_answer"
     	android:layout_width="match_parent"
     	android:layout_height="0px"
     	android:layout_weight="0.6"
