--- a/res/layout/fragment_key.xml
+++ b/res/layout/fragment_key.xml
@@ -3,15 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 	<Button 
-	    android:id= "@+id/key"
+	    android:id= "@+id/key_button"
 	    android:layout_height="40dp"
 	    android:layout_width="30dp"
-	    android:textSize="12sp"
+	    android:textSize="18sp"
 	    android:layout_marginLeft="2dp"
 	    android:layout_marginRight="2dp"
-	    android:text="A"
 	    android:textColor="#ffffff"
-	    android:background="@drawable/button_thin_shape" >
+	    android:background="@drawable/button_thin_selector" >
 	    
 	</Button>
 </FrameLayout>
