--- a/res/layout/fragment_question_answer.xml
+++ b/res/layout/fragment_question_answer.xml
@@ -1,28 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-   <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:inputType="text"
-        android:ems="10" >
+	<TableLayout
+    	android:id="@+id/tableAnswer"
+    	android:gravity="center_horizontal"
+      	android:layout_width="match_parent"
+       	android:layout_height="wrap_content"
+       	android:layout_marginTop="8dp">
 
-    </EditText>
+    </TableLayout>
     
-   <TableLayout 
-       android:id="@+id/table"
-       android:gravity="center_horizontal"
-       android:layout_alignParentBottom="true"
-       android:layout_marginBottom="5dp"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+	<TableLayout 
+		android:id="@+id/tableKeyboard"
+       	android:gravity="center_horizontal"
+       	android:layout_alignParentBottom="true"
+       	android:layout_marginBottom="5dp"
+       	android:layout_width="match_parent"
+       	android:layout_height="wrap_content">
        
-   </TableLayout>
+	</TableLayout>
   
 </RelativeLayout>
