--- a/res/layout/fragment_question_answer_solution.xml
+++ b/res/layout/fragment_question_answer_solution.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 	<Button 
-	    android:id= "@+id/key_button_solution"
+	    android:id= "@+id/button_solution"
 	    android:layout_height="42dp"
 	    android:layout_width="30dp"
 	    android:layout_marginLeft="-1dp"
