--- a/res/layout/fragment_question_answer.xml
+++ b/res/layout/fragment_question_answer.xml
@@ -1,25 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1">
 
 	<TableLayout
     	android:id="@+id/tableAnswer"
     	android:gravity="center_horizontal"
       	android:layout_width="match_parent"
-       	android:layout_height="wrap_content"
-       	android:layout_marginTop="8dp">
+         	android:layout_height="0px"
+    	android:layout_weight="0.4"
+       	android:layout_marginTop="4dp">
 
     </TableLayout>
     
 	<TableLayout 
 		android:id="@+id/tableKeyboard"
-       	android:gravity="center_horizontal"
-       	android:layout_alignParentBottom="true"
-       	android:layout_marginBottom="5dp"
+       	android:gravity="bottom|center_horizontal"
+       	android:layout_marginBottom="2dp"
        	android:layout_width="match_parent"
-       	android:layout_height="wrap_content">
+       	android:layout_height="0px"
+    	android:layout_weight="0.6">
        
 	</TableLayout>
   
-</RelativeLayout>
+</LinearLayout>
