--- a/res/layout/fragment_question_answer_key.xml
+++ b/res/layout/fragment_question_answer_key.xml
@@ -8,7 +8,9 @@
 	    android:layout_width="30dp"
 	    android:textSize="18sp"
 	    android:layout_marginLeft="2dp"
-	    android:layout_marginRight="2dp"
+	    android:layout_marginRight="2dp"	   
+	    android:layout_marginTop="3dp"
+	    android:text="A" 
 	    android:textColor="#ffffff"
 	    android:background="@drawable/button_thin_selector" >
 	    
