--- a/res/layout/fragment_question_answer_key.xml
+++ b/res/layout/fragment_question_answer_key.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 	<Button 
 	    android:id= "@+id/key_button"
-	    android:layout_height="35dp"
+	    android:layout_height="40dp"
 	    android:layout_width="30dp"
 	    android:textSize="18sp"
 	    android:layout_marginLeft="2dp"
@@ -12,7 +12,7 @@
 	    android:layout_marginTop="3dp"
 	    android:text="A" 
 	    android:textColor="#ffffff"
-	    android:background="@drawable/button_thin_selector" >
+	    android:background="@drawable/key_selector" >
 	    
 	</Button>
 </FrameLayout>
