--- a/res/layout/fragment_question_answer.xml
+++ b/res/layout/fragment_question_answer.xml
@@ -5,13 +5,15 @@
     android:orientation="vertical"
     android:weightSum="1">
 
+	
 	<TableLayout
     	android:id="@+id/tableAnswer"
-    	android:gravity="center_horizontal"
+    	android:gravity="top|center_horizontal"
       	android:layout_width="match_parent"
-         	android:layout_height="0px"
+        android:layout_height="0px"
     	android:layout_weight="0.4"
-       	android:layout_marginTop="4dp">
+    	android:background="@drawable/matricula_america"
+       	android:layout_marginTop="1dp">
 
     </TableLayout>
     
