--- a/res/layout/fragment_question_answer_solution.xml
+++ b/res/layout/fragment_question_answer_solution.xml
@@ -2,14 +2,16 @@
 <FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-	<Button 
-	    android:id= "@+id/button_solution"
-	    android:layout_height="42dp"
-	    android:layout_width="30dp"
-	    android:layout_marginLeft="-1dp"
-	    android:layout_marginRight="-1dp"
-	    android:textSize="20sp"
-	    android:padding="0px">
+
+	<Button
+	    android:id="@+id/button_solution"
+	    android:layout_width="25dp"
+	    android:layout_height="30dp"
+	    android:layout_marginLeft="-3dp"
+	    android:layout_marginRight="-3dp"
+	    android:padding="0px"
+	    android:textColor="#000000"
+	    android:textSize="18sp" >
 	    
 	</Button>
 </FrameLayout>
