--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 <!-- the theme applied to the application or activity -->
     <style name="CustomActionBarTheme"
            parent="android:Theme.Holo">
@@ -13,6 +13,7 @@
            parent="android:Widget.Holo.ActionBar">
         <item name="android:background">@drawable/actionbar_background</item>
         <item name="android:height">35dp</item>
+        <item name="android:itemPadding">0dip</item>
     </style>
 
     <!-- ActionBar title text -->
@@ -26,4 +27,5 @@
            parent="android:Widget.Holo.ActionBar.TabText">
         <item name="android:textColor">#ffffff</item>
     </style>
+
 </resources>
