--- a/res/menu/menu_question.xml
+++ b/res/menu/menu_question.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-        <item
-            android:id="@+id/menu_item_share"
-            android:showAsAction="ifRoom"
-            android:title="Share"
-            android:actionProviderClass=
-                "android.widget.ShareActionProvider" />
-
+    
+	<item
+	    android:id="@+id/help_buttonnn"
+	    android:showAsAction="ifRoom"
+	    android:icon="@drawable/ic_action_help"
+	    android:title="Help"/>
+	
+	<item
+	    android:id="@+id/menu_item_share"
+	    android:showAsAction="ifRoom"
+	    android:title="Share"
+	    android:actionProviderClass="android.widget.ShareActionProvider" />
 </menu>
