--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -4,28 +4,15 @@
     <style name="CustomActionBarTheme"
            parent="android:Theme.Holo">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
-        <item name="android:actionBarTabTextStyle">@style/MyActionBarTabText</item>
-        <item name="android:actionMenuTextColor">@style/MyActionBarTabText</item>
     </style>
 
     <!-- ActionBar styles -->
     <style name="MyActionBar"
-           parent="android:Widget.Holo.ActionBar">
+           parent="android:Widget.ActionBar">
         <item name="android:background">@drawable/actionbar_background</item>
-        <item name="android:height">35dp</item>
-        <item name="android:itemPadding">0dip</item>
+        <item name="android:height">40dp</item>
+        <item name="android:displayOptions">showHome|useLogo</item>
+        <item name="android:icon">@android:color/transparent</item>
     </style>
-
-    <!-- ActionBar title text -->
-    <style name="MyActionBarTitleText"
-           parent="android:TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">#ffffff</item>
-    </style>
-
-    <!-- ActionBar tabs text styles -->
-    <style name="MyActionBarTabText"
-           parent="android:Widget.Holo.ActionBar.TabText">
-        <item name="android:textColor">#ffffff</item>
-    </style>
-
+	
 </resources>
