--- a/res/layout/fragment_question_answer.xml
+++ b/res/layout/fragment_question_answer.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:clipChildren="false"
     android:weightSum="1">
 
 	
@@ -13,6 +14,7 @@
         android:layout_height="0px"
     	android:layout_weight="0.4"
     	android:background="@drawable/matricula_america"
+    	android:clipChildren="false"
        	android:layout_marginTop="1dp">
 
     </TableLayout>
@@ -23,6 +25,7 @@
        	android:layout_marginBottom="2dp"
        	android:layout_width="match_parent"
        	android:layout_height="0px"
+       	android:clipChildren="false"
     	android:layout_weight="0.6">
        
 	</TableLayout>
