--- a/res/layout/fragment_question_answer_key.xml
+++ b/res/layout/fragment_question_answer_key.xml
@@ -17,4 +17,19 @@
 	    android:background="@drawable/key_selector" >
 	    
 	</Button>
+	<Button 
+	    android:id= "@+id/key_button_copy"
+
+	    android:layout_height="30dp"
+	    android:layout_width="25dp"
+
+	    android:textSize="18sp"
+	    android:layout_marginLeft="1dp"
+	    android:layout_marginRight="1dp"	   
+	    android:layout_marginTop="3dp"
+	    android:text="A" 
+	    android:textColor="#ffffff"
+	    android:background="@drawable/key_selector" >
+	    
+	</Button>
 </FrameLayout>
