--- a/res/layout/fragment_question_answer_solution.xml
+++ b/res/layout/fragment_question_answer_solution.xml
@@ -7,11 +7,12 @@
 	    android:id="@+id/button_solution"
 	    android:layout_width="25dp"
 	    android:layout_height="30dp"
-	    android:layout_marginLeft="-3dp"
-	    android:layout_marginRight="-3dp"
+	    android:layout_marginLeft="1dp"
+	    android:layout_marginRight="1dp"
 	    android:padding="0px"
-	    android:textColor="#000000"
-	    android:textSize="18sp" >
+	    android:textColor="#065a9d"
+	    android:textSize="18sp"
+	    android:background="@drawable/button_answer_solution" >
 	    
 	</Button>
 </FrameLayout>
