--- a/res/layout/fragment_question_photo.xml
+++ b/res/layout/fragment_question_photo.xml
@@ -7,8 +7,8 @@
     
            <com.android.worldcarquiz.utils.LoaderImageView 
                android:id="@+id/photo_question"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"/>
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"/>
            
            <ImageView
                  android:id="@+id/shadowTop"
