--- a/res/drawable-mdpi/button_answer_solution.xml
+++ b/res/drawable-mdpi/button_answer_solution.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-	<stroke
-    	android:color="#000000"/>
-    <padding 
-        android:left="2dp"
-        android:right="2dp"
-        android:top="2dp"
-        android:bottom="2dp"/>
-    
-	<gradient
-	    android:angle="270"
-	    android:startColor="#00000000"
-	    android:centerColor="#00000000"
-	    android:endColor="#09000000"/>    
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<item>
+    <shape android:shape="rectangle" >
+        <solid android:color="@android:color/transparent" />
+    </shape>
+</item>
+
+<item android:top="-2dp" android:right="-2dp" android:left="-2dp">
+    <shape>
+        <corners
+        android:bottomLeftRadius="4dp"
+        android:bottomRightRadius="4dp"
+        android:radius="0.1dp" />
+        <solid android:color="@android:color/transparent" />
+        <stroke
+            android:width="1dp"
+            android:color="#E8E6E7" />
+    </shape>
+</item>
+</layer-list>
