Funcionando la mierda de animacion

--- a/res/layout/fragment_question_answer_key.xml
+++ b/res/layout/fragment_question_answer_key.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_key"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 	<Button 
@@ -17,19 +18,4 @@
 	    android:background="@drawable/key_selector" >
 	    
 	</Button>
-	<Button 
-	    android:id= "@+id/key_button_copy"
-
-	    android:layout_height="30dp"
-	    android:layout_width="25dp"
-
-	    android:textSize="18sp"
-	    android:layout_marginLeft="1dp"
-	    android:layout_marginRight="1dp"	   
-	    android:layout_marginTop="3dp"
-	    android:text="A" 
-	    android:textColor="#ffffff"
-	    android:background="@drawable/key_selector" >
-	    
-	</Button>
-</FrameLayout>
+</RelativeLayout>
