--- a/res/layout/container_question_solved.xml
+++ b/res/layout/container_question_solved.xml
@@ -1,20 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container_question_solved"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:background="@drawable/shapes">
+    android:orientation="vertical"
+    android:weightSum="1"
+    android:background="@drawable/road_vertical">
     
     <FrameLayout 
         android:id="@+id/fragment_question_solved"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:background="@drawable/road_vertical"/>        
+    	android:layout_height="wrap_content"
+    	android:layout_weight="1"/>        
         
     <FrameLayout 
         android:id="@+id/fragment_banner"
     	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:layout_alignParentBottom="true"
-    	/>
+    	android:layout_height="wrap_content"/>
          
-</RelativeLayout>
+</LinearLayout>
