--- a/res/layout/fragment_question_solved.xml
+++ b/res/layout/fragment_question_solved.xml
@@ -1,45 +1,50 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"  
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:background="@drawable/shapes">
-    	
-	<ImageView
-     	android:id="@+id/world_quiz"
+
+    <ImageView
+        android:id="@+id/world_quiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds= "true"
+        android:adjustViewBounds="true"
+        android:layout_alignParentTop="true"
         android:scaleType="fitCenter"
-        android:gravity="center"
         android:src="@drawable/awesome" />
-	
-	<RelativeLayout 
- 		android:layout_width="wrap_content"
- 		android:layout_height="wrap_content"
- 		android:layout_marginTop="-30dp"
- 		android:layout_gravity="center">
-	    <TextView
-        android:id="@+id/points"
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:id="@+id/points_solved"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+15"
-        android:layout_marginRight="5dp"
-        android:textColor="#c3c3c3"
-        android:textSize="25sp" />
-	    <ImageView 
-	        android:layout_width="25dp"
-	        android:layout_height="25dp"
-	        android:adjustViewBounds= "true"
-	        android:layout_toRightOf="@id/points"
-	        android:src="@drawable/ic_star"/>
-	    
-	</RelativeLayout>
+        android:layout_below="@id/world_quiz"
+        android:gravity="center" >
+
+        <TextView
+            android:id="@+id/points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="+15"
+            android:textColor="#c3c3c3"
+            android:textSize="25sp" />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/points"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_star" />
+    </RelativeLayout>
 	
 	<RelativeLayout 
- 		android:layout_width="wrap_content"
+	    android:id="@+id/logo_solved"
+ 		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
- 		android:layout_marginTop="5dp">
+ 		android:layout_below="@id/points_solved">
+	    
 	    <ImageView 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -48,6 +53,7 @@
 	        android:adjustViewBounds= "true"
 	        android:scaleType="fitCenter"
 	        android:src="@drawable/premio"/>
+	    
 	    <TextView 
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
@@ -58,16 +64,21 @@
 	        android:textColor="#ffffff"/>
 	    
 	</RelativeLayout>
+	
 	<ImageView 
+	    android:id="@+id/separator_solved"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
+	    android:layout_below="@id/logo_solved"
 	    android:layout_marginTop="-10dp"
 	    android:adjustViewBounds= "true"
 	    android:src="@drawable/separator_white"/>
+	
 	<TextView 
+	    android:id="@+id/short_text_definition"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:id="@+id/short_text_definition"
+	    android:layout_below="@id/separator_solved"
 	    android:gravity="center_horizontal"
 	    android:layout_marginTop="-10dp"
 	    android:layout_marginBottom="5dp"
@@ -80,6 +91,7 @@
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
 	    android:orientation="horizontal" 
 	    android:weightSum="1">
 
@@ -88,7 +100,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/button_no_corners_selector"
-	        android:minHeight="50dp"
+	        android:minHeight="45dp"
 	        android:layout_weight="0.33"
 	        android:text="@string/prev_car"
 	        android:textColor="#ffffff"
@@ -101,7 +113,7 @@
 	        android:background="@drawable/button_no_corners_selector"
 	        android:layout_marginRight="1dp"
 	        android:layout_marginLeft= "1dp"
-	        android:minHeight="50dp"
+	        android:minHeight="45dp"
 	        android:layout_weight="0.33"
 	        android:text="@string/garage"
 	        android:textColor="#ffffff"
@@ -112,18 +124,12 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/button_no_corners_selector"
-	        android:minHeight="50dp"
+	        android:minHeight="45dp"
 	        android:layout_weight="0.33"
 	        android:text="@string/next_car"
 	        android:textColor="#ffffff"
 	        android:textSize="20sp" />
 
 	</LinearLayout>
-	
-	 <FrameLayout 
-        android:id="@+id/fragment_banner"
-    	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	/>
-         
-</LinearLayout>
+	         
+</RelativeLayout>
