--- a/res/layout/fragment_question_solved.xml
+++ b/res/layout/fragment_question_solved.xml
@@ -19,6 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/world_quiz"
+        android:layout_marginTop="-28dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center" >
 
         <TextView
@@ -48,8 +50,8 @@
 	    <ImageView 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="5dp"
-	        android:layout_marginRight="5dp"
+	        android:layout_marginLeft="8dp"
+	        android:layout_marginRight="8dp"
 	        android:adjustViewBounds= "true"
 	        android:scaleType="fitCenter"
 	        android:src="@drawable/premio"/>
@@ -70,7 +72,7 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@id/logo_solved"
-	    android:layout_marginTop="-10dp"
+	    android:layout_marginTop="-5dp"
 	    android:adjustViewBounds= "true"
 	    android:src="@drawable/separator_white"/>
 	
@@ -80,7 +82,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_below="@id/separator_solved"
 	    android:gravity="center_horizontal"
-	    android:layout_marginTop="-10dp"
+	    android:layout_marginTop="-5dp"
 	    android:layout_marginBottom="5dp"
 	    android:layout_marginLeft="5dp"
 	    android:layout_marginRight="5dp"
