--- a/res/layout/fragment_question_solved.xml
+++ b/res/layout/fragment_question_solved.xml
@@ -61,8 +61,9 @@
 	        android:layout_height="wrap_content"
 	        android:id="@+id/car_title"
 	        android:text="Gran Torino"
-	        android:textSize="30sp"
+	        android:textSize="25sp"
 	        android:layout_centerInParent="true"
+	        android:gravity="center_horizontal"
 	        android:textColor="#ffffff"/>
 	    
 	</RelativeLayout>
