--- a/res/layout/fragment_question_solved.xml
+++ b/res/layout/fragment_question_solved.xml
@@ -28,7 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:text="+15"
             android:textColor="#c3c3c3"
             android:textSize="25sp" />
 
@@ -60,7 +59,6 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:id="@+id/car_title"
-	        android:text="Gran Torino"
 	        android:textSize="25sp"
 	        android:layout_centerInParent="true"
 	        android:gravity="center_horizontal"
@@ -88,8 +86,7 @@
 	    android:layout_marginLeft="5dp"
 	    android:layout_marginRight="5dp"
 	    android:textColor="#ffffff"
-	    android:textSize="18sp"
-	    android:text="Producido por Ford entre los años 1956 y 1967 el Gran Torino es un icono de los 60 en EEUU..."/>
+	    android:textSize="18sp"/>
 
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -99,7 +96,7 @@
 	    android:weightSum="1">
 
 	   <Button
-	        android:id="@+id/solution_prev"
+	        android:id="@+id/solution_prev_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/button_no_corners_selector"
@@ -110,7 +107,7 @@
 	        android:textSize="20sp" />
 	    
 	    <Button
-	        android:id="@+id/solution_garage"
+	        android:id="@+id/solution_garage_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/button_no_corners_selector"
@@ -123,7 +120,7 @@
 	        android:textSize="20sp" />
 	    
 	    <Button
-	        android:id="@+id/solution_next"
+	        android:id="@+id/solution_next_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/button_no_corners_selector"
