--- a/res/layout/fragment_question_answer_key.xml
+++ b/res/layout/fragment_question_answer_key.xml
@@ -5,12 +5,12 @@
     android:layout_height="wrap_content">
 	<Button 
 	    android:id= "@+id/key_button"
-	    android:layout_height="30dp"
-	    android:layout_width="25dp"
-	    android:textSize="18sp"
+	    android:layout_height="@dimen/button_height"
+	    android:layout_width="@dimen/button_width"
+	    android:textSize="@dimen/text_size_button"
 	    android:layout_marginLeft="1dp"
 	    android:layout_marginRight="1dp"	   
-	    android:layout_marginTop="3dp"
+	    android:layout_marginTop="@dimen/margin_top_button"
 	    android:textColor="#ffffff"
 	    android:background="@drawable/key_selector" >
 	    
