--- a/res/values-normal/dimens.xml
+++ b/res/values-normal/dimens.xml
@@ -3,5 +3,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_width">35dp</dimen>
+    <dimen name="button_height">35dp</dimen>
+    <dimen name="text_size_button">18sp</dimen>
+    <dimen name="margin_top_button">3dp</dimen>
 
 </resources>
