--- a/res/values-w720dp/dimens.xml
+++ b/res/values-w720dp/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
+    <!-- XLarge -->
     <dimen name="button_width">45dp</dimen>
-    <dimen name="button_height">45dp</dimen>
+    <dimen name="button_height">55dp</dimen>
     <dimen name="text_size_button">24sp</dimen>
     <dimen name="margin_top_button">4dp</dimen>
 
