--- a/res/layout/fragment_question_answer_solution_space.xml
+++ b/res/layout/fragment_question_answer_solution_space.xml
@@ -2,11 +2,11 @@
 <FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="1dp"
+    android:layout_marginLeft="10dp"
     android:layout_marginRight="1dp">
 
 	<Button
-	    android:id="@+id/button_solution"
+	    android:id="@+id/button_solution_space"
 	    android:layout_width="25dp"
 	    android:layout_height="30dp"
 	    android:padding="0px"
