--- a/res/layout/fragment_question_answer_solution_space.xml
+++ b/res/layout/fragment_question_answer_solution_space.xml
@@ -9,6 +9,8 @@
 	    android:id="@+id/button_solution_space"
 	    android:layout_width="25dp"
 	    android:layout_height="30dp"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="1dp"
 	    android:padding="0px"
 	    android:textColor="#065a9d"
 	    android:textSize="18sp"
