--- a/res/layout/fragment_question_answer_solution.xml
+++ b/res/layout/fragment_question_answer_solution.xml
@@ -11,9 +11,8 @@
 	    android:layout_height="30dp"
 	    android:layout_marginLeft="1dp"
 	    android:layout_marginRight="1dp"
-	    android:padding="0px"
 	    android:textColor="#065a9d"
-	    android:textSize="18sp"
+	    android:textSize="@dimen/text_size_button"
 	    android:background="@drawable/button_answer_solution" >
 	    
 	</Button>
