--- a/res/layout/fragment_question_photo.xml
+++ b/res/layout/fragment_question_photo.xml
@@ -1,58 +1,61 @@
-
-   
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+      
     <RelativeLayout 
         android:id="@+id/question_head"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    	android:layout_height="wrap_content">
+    	
+		<ImageButton
+	        android:id="@+id/button_share"
+	        android:layout_width="50dp"
+	        android:layout_height="40dp"
+	        android:layout_alignParentRight="true"
+	        android:src="@drawable/ic_action_help"
+	        android:background="@null"/>
+    
+   	 	<ImageButton
+	        android:id="@+id/button_help"
+	        android:layout_width="50dp"
+	        android:layout_height="40dp" 
+	        android:layout_toLeftOf="@id/button_share"
+	        android:src="@drawable/ic_action_share"
+	        android:background="@null"/>
         
-        <ImageButton
-            android:id="@+id/button_share"
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_action_help"
-            android:background="@null"/>
-        
-        <ImageButton
-            android:id="@+id/button_help"
-            android:layout_width="50dp"
-            android:layout_height="40dp" 
-            android:layout_toLeftOf="@id/button_share"
-            android:src="@drawable/ic_action_share"
-            android:background="@null"/>
+    </RelativeLayout>
+    
+ 	<!-- Imagen del coche -->
+	<com.android.worldcarquiz.utils.LoaderImageView 
+	    android:id="@+id/photo_question"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@id/question_head"/>
 
-	    <!-- Imagen del coche -->
-		<com.android.worldcarquiz.utils.LoaderImageView 
-		    android:id="@+id/photo_question"
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-	        android:layout_below="@id/button_share"
-	        android:gravity="center_horizontal"/>
-	
-		<ImageView
-		      android:id="@+id/shadowTop"
-		      android:layout_width="match_parent"
-		      android:layout_height="12dp"
-		      android:scaleType="centerCrop"
-		      android:layout_alignTop="@id/photo_question"
-		      android:src="@drawable/shadow_top" />
-		        
-		<ImageView
-		    android:id="@+id/shadowBottom"
-		    android:layout_width="match_parent"
-		    android:layout_height="12dp"
-		    android:scaleType="center"
-		    android:layout_alignBottom="@id/photo_question"
-		    android:src="@drawable/shadow_bottom" /> 
-		    
-		<ImageView 
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:src="@drawable/star"/>
-	    
-	</RelativeLayout>
+	<ImageView
+		android:id="@+id/shadowTop"
+		android:layout_width="match_parent"
+		android:layout_height="12dp"
+		android:scaleType="centerCrop"
+		android:layout_alignTop="@id/photo_question"
+		android:src="@drawable/shadow_top" />
+        
+	<ImageView
+	    android:id="@+id/shadowBottom"
+	    android:layout_width="match_parent"
+	    android:layout_height="12dp"
+	    android:scaleType="center"
+	    android:layout_alignBottom="@id/photo_question"
+	    android:src="@drawable/shadow_bottom" /> 
+    
+	<ImageView 
+		android:layout_width="60dp"
+		android:layout_height="60dp"
+		android:layout_alignParentTop="true"
+		android:layout_centerInParent="true"
+		android:src="@drawable/star"/>
+    
+</RelativeLayout>
 
